--- a/assets/style.css
+++ b/assets/style.css
@@ -13,3 +13,34 @@
 #content .name{
     font-size: 32px;
 }
+
+#content .donate-button{
+    display: flex;
+    justify-content: center;
+}
+
+#content .donate-button > a{
+    background: linear-gradient(120deg, #155799, #159957);
+    color: white;
+    padding: 20px;
+    font-size: 28px;
+    border-radius: 40px;
+    margin-top: 40px;
+    text-decoration: none;
+}
+
+.project-name{
+    position: relative;
+}
+
+.project-name > img{
+    width: 150px;
+    top: 0;
+    left: 20px;
+}
+
+@media(min-width: 672px){
+    .project-name > img{
+        position: absolute;
+    }
+}
