--- a/assets/style.css
+++ b/assets/style.css
@@ -27,6 +27,11 @@
     border-radius: 40px;
     margin-top: 40px;
     text-decoration: none;
+    transition: 0.5s;
+}
+
+#content .donate-button > a:hover{
+    filter: brightness(120%);
 }
 
 .project-name{
