--- a/assets/style.css
+++ b/assets/style.css
@@ -22,7 +22,7 @@
 #content .donate-button > a{
     background: linear-gradient(120deg, #155799, #159957);
     color: white;
-    padding: 20px;
+    padding: 20px 40px;
     font-size: 28px;
     border-radius: 40px;
     margin-top: 40px;
@@ -41,7 +41,7 @@
 .project-name > img{
     width: 150px;
     top: 0;
-    left: 20px;
+    left: 20%;
 }
 
 .project-name > .pad{
