--- a/assets/style.css
+++ b/assets/style.css
@@ -39,17 +39,7 @@
 }
 
 .project-name > img{
-    width: 150px;
-    top: 0;
-    left: 20%;
+    width: 250px;
+    margin-bottom: 100px;
 }
 
-.project-name > .pad{
-    height: 200px;
-}
-
-@media(min-width: calc(64em + 1px)){
-    .project-name > img{
-        position: absolute;
-    }
-}
