--- a/assets/style.css
+++ b/assets/style.css
@@ -37,6 +37,7 @@
 .project-name{
     position: relative;
     font-size: 2.25rem !important;
+    padding: 3rem 4rem !important;
 }
 
 .project-name > img{
