--- a/assets/style.css
+++ b/assets/style.css
@@ -28,6 +28,7 @@
     margin-top: 40px;
     text-decoration: none;
     transition: 0.5s;
+    margin-bottom: 20px;
 }
 
 #content .donate-button > a:hover{
